feat: estructura 100% responsive y footer pendiente de ajuste en pantallas grandes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "conductual",
         "infanto",
+        "laptos",
         "Neurodesarrollo",
+        "Psicomotricidad",
         "Psicopedagoga",
         "TDAH",
         "whatsapp"
